// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`status page content > when agent script download path and proxy secret are not set 1`] = `
"
  <html lang='en-US'>
  <head>
    <meta charset='utf-8'/>
    <title>Fingerprint Pro Cloudflare Worker</title>
    <link rel='icon' type='image/x-icon' href='https://fingerprint.com/img/favicon.ico'>
    <style nonce='QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB'>
      h1, span {
        display: block;
        padding-top: 1em;
        padding-bottom: 1em;
        text-align: center;
      }
    </style>
  </head>
  <body>
    <h1>Fingerprint Pro Cloudflare Integration</h1>
  <span>🎉 Your Cloudflare worker is deployed</span>
  <span>
  ℹ️ Worker version: 0.0.1-test.0
  </span>
  
    <span>
    The following environment variables are not defined. Please reach out our support team.
    </span>
    
      <span>
      ⚠️ <strong>AGENT_SCRIPT_DOWNLOAD_PATH </strong> is not set
      </span>
      
      <span>
      ⚠️ <strong>PROXY_SECRET </strong> is not set
      </span>
      
  <span>
  ❓Please reach out our support via <a href='mailto:support@fingerprint.com'>support@fingerprint.com</a> if you have any issues
  </span>
    
  </body>
  </html>
  "
`;

exports[`status page content > when agent script download path is not set 1`] = `
"
  <html lang='en-US'>
  <head>
    <meta charset='utf-8'/>
    <title>Fingerprint Pro Cloudflare Worker</title>
    <link rel='icon' type='image/x-icon' href='https://fingerprint.com/img/favicon.ico'>
    <style nonce='QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB'>
      h1, span {
        display: block;
        padding-top: 1em;
        padding-bottom: 1em;
        text-align: center;
      }
    </style>
  </head>
  <body>
    <h1>Fingerprint Pro Cloudflare Integration</h1>
  <span>🎉 Your Cloudflare worker is deployed</span>
  <span>
  ℹ️ Worker version: 0.0.1-test.0
  </span>
  
    <span>
    The following environment variables are not defined. Please reach out our support team.
    </span>
    
      <span>
      ⚠️ <strong>AGENT_SCRIPT_DOWNLOAD_PATH </strong> is not set
      </span>
      
  <span>
  ❓Please reach out our support via <a href='mailto:support@fingerprint.com'>support@fingerprint.com</a> if you have any issues
  </span>
    
  </body>
  </html>
  "
`;

exports[`status page content > when all variables are set 1`] = `
"
  <html lang='en-US'>
  <head>
    <meta charset='utf-8'/>
    <title>Fingerprint Pro Cloudflare Worker</title>
    <link rel='icon' type='image/x-icon' href='https://fingerprint.com/img/favicon.ico'>
    <style nonce='QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB'>
      h1, span {
        display: block;
        padding-top: 1em;
        padding-bottom: 1em;
        text-align: center;
      }
    </style>
  </head>
  <body>
    <h1>Fingerprint Pro Cloudflare Integration</h1>
  <span>🎉 Your Cloudflare worker is deployed</span>
  <span>
  ℹ️ Worker version: 0.0.1-test.0
  </span>
  
    <span>
     ✅ All environment variables are set
    </span>
    
  <span>
  ❓Please reach out our support via <a href='mailto:support@fingerprint.com'>support@fingerprint.com</a> if you have any issues
  </span>
    
  </body>
  </html>
  "
`;

exports[`status page content > when get result path is not set 1`] = `
"
  <html lang='en-US'>
  <head>
    <meta charset='utf-8'/>
    <title>Fingerprint Pro Cloudflare Worker</title>
    <link rel='icon' type='image/x-icon' href='https://fingerprint.com/img/favicon.ico'>
    <style nonce='QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB'>
      h1, span {
        display: block;
        padding-top: 1em;
        padding-bottom: 1em;
        text-align: center;
      }
    </style>
  </head>
  <body>
    <h1>Fingerprint Pro Cloudflare Integration</h1>
  <span>🎉 Your Cloudflare worker is deployed</span>
  <span>
  ℹ️ Worker version: 0.0.1-test.0
  </span>
  
    <span>
    The following environment variables are not defined. Please reach out our support team.
    </span>
    
      <span>
      ⚠️ <strong>GET_RESULT_PATH </strong> is not set
      </span>
      
  <span>
  ❓Please reach out our support via <a href='mailto:support@fingerprint.com'>support@fingerprint.com</a> if you have any issues
  </span>
    
  </body>
  </html>
  "
`;

exports[`status page content > when proxy secret is not set 1`] = `
"
  <html lang='en-US'>
  <head>
    <meta charset='utf-8'/>
    <title>Fingerprint Pro Cloudflare Worker</title>
    <link rel='icon' type='image/x-icon' href='https://fingerprint.com/img/favicon.ico'>
    <style nonce='QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB'>
      h1, span {
        display: block;
        padding-top: 1em;
        padding-bottom: 1em;
        text-align: center;
      }
    </style>
  </head>
  <body>
    <h1>Fingerprint Pro Cloudflare Integration</h1>
  <span>🎉 Your Cloudflare worker is deployed</span>
  <span>
  ℹ️ Worker version: 0.0.1-test.0
  </span>
  
    <span>
    The following environment variables are not defined. Please reach out our support team.
    </span>
    
      <span>
      ⚠️ <strong>PROXY_SECRET </strong> is not set
      </span>
      
  <span>
  ❓Please reach out our support via <a href='mailto:support@fingerprint.com'>support@fingerprint.com</a> if you have any issues
  </span>
    
  </body>
  </html>
  "
`;
